# cr3ctf-2024

./: .gitignore  .gitmodules  README.md
challenges/block/cr3dao-revenge/: .env.example  challenge.yml
challenges/for/kennel/challenge/beacons/: CMakeLists.txt  beacon.cpp  beacon.h  cmake_install.cmake  consts.h  executer.cpp  executer.h  main.cpp  util.h
challenges/web/shippering/challenge/web/: .flake8  Dockerfile  flag  main.py  nsjail.cfg  pyproject.toml
challenges/web/shippering/challenge/web/resources/: model.txt
challenges/web/shippering/challenge/web/shippering/: __init__.py  __main__.py
challenges/web/shippering/challenge/web/shippering/routers/: main.py
challenges/web/shippering/challenge/web/shippering/util/: fs.py
challenges/web/shippering/challenge/web/static/: styles.css
challenges/web/shippering/challenge/web/templates/: index.html  with_text.html
challenges/web/spurdo-ebinling/challenge/backend/: .gitignore  Dockerfile  main.py  pyproject.toml  setup.cfg
challenges/web/spurdo-ebinling/challenge/backend/messages/: protocol.proto
challenges/web/spurdo-ebinling/challenge/backend/scripts/: compile_proto.py
challenges/web/spurdo-ebinling/challenge/backend/server/: __main__.py
challenges/web/spurdo-ebinling/challenge/backend/server/const/: achievements.py  chances.py  items.py  numbers.py
challenges/web/spurdo-ebinling/challenge/backend/server/core/: config.py  dispatcher.py  handlers.py  messages.py  protocol.py  serializer.py  session.py
challenges/web/spurdo-ebinling/challenge/backend/server/enums/: packet_type.py
challenges/web/spurdo-ebinling/challenge/backend/server/exceptions/: drop_connection.py
challenges/web/spurdo-ebinling/challenge/backend/server/game/: mobs.py  state.py  wave.py
challenges/web/spurdo-ebinling/challenge/backend/server/handlers/: __init__.py  inventory.py  inventory_equip.py  level_up.py  ping.py  resource.py  wave.py
challenges/web/spurdo-ebinling/challenge/backend/server/proto/: protocol_pb2.pyi
challenges/web/spurdo-ebinling/challenge/backend/server/util/: fs.py  net.py
(+785 files in other folders)
