[tool.poetry]
name = "shippering"
version = "1.0.0"
description = ""
authors = ["Arsenii es3n1n <me@es3n.in>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
Jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
markovify = "^0.9.4"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-quotes = "^3.4.0"
mypy = "^1.8.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
lines_after_imports = 2
combine_as_imports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
