[tool.poetry]
name = "spurdo-leveling-backend"
version = "0.1.0"
description = "A simple game written in 2 days"
authors = ["Arsenii es3n1n <me@es3n.in>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
loguru = "^0.7.2"
protobuf = "^5.26.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-quotes = "^3.4.0"
mypy = "^1.9.0"
isort = "^5.13.2"
flake8-print = "^5.0.0"
types-protobuf = "^4.24.0.20240311"
hexdump = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
